--- a/flaskblog/subjects/subjects_templates/math/calc_I/calc_I_pp.html
+++ b/flaskblog/subjects/subjects_templates/math/calc_I/calc_I_pp.html
@@ -30,7 +30,7 @@
 
         <div class="article-content">
             <ul class="topic">
-                <li class="topic"><a href="files/functions_pp.pdf" target="_blank">Functions</a></li>
+                <li class="topic"><a href="https://drive.google.com/file/d/1Bep9lvGxL8yu9qIQVpioXUywt9hvnbKi/preview" target="_blank">Functions</a></li>
                 <li class="topic"><a href="">Trigonometric functions</a></li>
                 <li class="topic"><a href="">Exponential functions & logarithms</a></li>
                 <li class="topic"><a href="">Inverse functions</a></li>
@@ -68,16 +68,16 @@
         <h6><b>Useful Links :</b></h6>
         <table>
             <tr>
-                <td><u><a href="{{ url_for('math.math_home') }}">Math Homepage</a></u></td>
+                <td><u><a href="#">Math Homepage</a></u></td>
             </tr>
             <tr>
-                <td><u><a href="{{ url_for('math.calc_i_intro') }}">Calc I Homepage</a></u></td>
+                <td><u><a href="#">Calc I Homepage</a></u></td>
             </tr>
             <tr>
                 <td><div class="dropdown-divider"></div></td>
             </tr>
             <tr>
-                <td><u><a href="{{ url_for('math.calc_i_pp') }}">Calc I Practice Problems</a></u></td>
+                <td><u><a href="#">Calc I Practice Problems</a></u></td>
             </tr>
             <tr>
                 <td><u><a href="#">Calc I Practice Solutions</a></u></td>
