--- a/flaskblog/subjects/subjects_templates/math/calc_I/calc_I_intro.html
+++ b/flaskblog/subjects/subjects_templates/math/calc_I/calc_I_intro.html
@@ -111,16 +111,16 @@
         <h6><b>Useful Links :</b></h6>
         <table>
             <tr>
-                <td><u><a href="{{ url_for('math.math_home') }}">Math Homepage</a></u></td>
+                <td><u><a href="#">Math Homepage</a></u></td>
             </tr>
             <tr>
-                <td><u><a href="{{ url_for('math.calc_i_intro') }}">Calc I Homepage</a></u></td>
+                <td><u><a href="#">Calc I Homepage</a></u></td>
             </tr>
             <tr>
                 <td><div class="dropdown-divider"></div></td>
             </tr>
             <tr>
-                <td><u><a href="{{ url_for('math.calc_i_pp') }}">Calc I Practice Problems</a></u></td>
+                <td><u><a href="#">Calc I Practice Problems</a></u></td>
             </tr>
             <tr>
                 <td><u><a href="#">Calc I Practice Solutions</a></u></td>
