--- a/flaskblog/subjects/subjects_templates/cheme/cheme_home.html
+++ b/flaskblog/subjects/subjects_templates/cheme/cheme_home.html
@@ -28,7 +28,7 @@
     
 <div class="content-section mysec-cheme">
     <div class="article-content">
-        <u><h2>Welcome Intrigued Chemical Engineers!</h2></u>
+        <h2><u>Welcome Intrigued Chemical Engineers!</u></h2>
         
         If you are here, it could mean that you are interested in learning some chemical engineering material. Well, I am glad
         you are able to join me to explore what entails the chemical engineering section of andrew's notebook. Take a look below
@@ -41,12 +41,12 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(\Delta E = q + w\)<br><br>
-                    \(\Delta S_{total} = \Delta S_{sys} + \Delta S_{sur}\)<br><br>
-                    \(S_{T=0} = 0\)
+                    \[\Delta E = q + w\]
+                    \[\Delta S_{total} = \Delta S_{sys} + \Delta S_{sur}\]
+                    \[S_{T=0} = 0\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
-                <u><h2>Thermodynamics</h2></u>
+                <h2><u>Thermodynamics</u></h2>
                     Thermodynamics is most likely one of the first few core classes you will be taking as an undergraduate student. In this topic, you will be
                     learning about the laws of thermodyanmics, the different relationships between properties of heat, temperature, energy and work as well as different
                     theorems that are used to analyze systems. 
@@ -56,7 +56,7 @@
                     used to spin a turbine, giving the turbine kinetic energy. This kinetic energy in the turbine is then used to turn electric generators which in equivalent
                     to converting the kinetic energy into electrical energy!
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn Thermo</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn Thermo</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -67,11 +67,11 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px; font-size: 14.5px;">
-                    \(E_{in} - E_{out} + E_{gen} = E_{acc}\)<br><br><br>   
-                    \(\frac{dm_{in}}{dt} - \frac{dm_{out}}{dt} + \frac{dm_{gen}}{dt} = \frac{dm_{acc}}{dt}\)<br><br>
+                    \[E_{in} - E_{out} + E_{gen} = E_{acc}\] 
+                    \(\frac{dm_{in}}{dt} - \frac{dm_{out}}{dt} + \frac{dm_{gen}}{dt} = \frac{dm_{acc}}{dt}\)
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
-                <u><h2>Mass & Energy Balance</h2></u>
+                    <h2><u>Mass & Energy Balance</u></h2>
                     Mass and energy balance is an important course for every chemical engineer to understand as it is a basis for a lot of the calculations and 
                     concepts that proceed this topic. Some of the concepts in this topic would be, as the name says, the conservation of mass and energy in 
                     a system. It might seem repetitive when doing some of the work in here, but it is worth spending that extra time mastering this concept!
@@ -82,7 +82,7 @@
                     The heat that is in your food, pot, utensils and the heat dissipated into the atmosphere should also sum to the amount of heat given out by your stove, this is due to the 
                     law of conservation of mass and energy!  
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn M&E Bal.</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn M&E Bal.</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -93,12 +93,12 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px; font-size: 14.5px;">
-                    \(A_{1}v_{1} = A_{2}v_{2}\)<br><br>
-                    \(\frac{\delta\rho}{\delta t} + \frac{\delta}{\delta x}(\rho u) = 0\)<br><br>
-                    \(\Delta P + \frac{1}{2} {\rho}{\Delta v^2} + {\rho}g{\Delta}h = 0\)
+                    \[A_{1}v_{1} = A_{2}v_{2}\]
+                    \[\frac{\delta\rho}{\delta t} + \frac{\delta}{\delta x}(\rho u) = 0\]
+                    \[\Delta P + \frac{1}{2} {\rho}{\Delta v^2} + {\rho}g{\Delta}h = 0\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
-                <u><h2>Fluid Mechanics</h2></u>
+                <h2><u>Fluid Mechanics</u></h2>
                     In fluid mechanics, you will learn all there is to know about, well... The movement of fluids! Fluids consists of both liquids and gases which apparently acts and moves
                     differently at different temperatures, pressures and other possible varying factors. Since this is also one of your core classes, it is important to have this on the tip of
                     your fingers as it is necessary to use fluid mechanics to determine how fast your fluid is flowing. This difference in fluid flow can make a major difference as to how efficient
@@ -108,7 +108,7 @@
                     the opening of your tap, you will see a difference in the speed of the water running out of your tap. Not to say that is all there is to fluid mechanics, but the essence of it is captured
                     in this example and is used to calculate the different speeds in the pipes you may see or know about in industrial settings.
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn Fluids</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn Fluids</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -119,12 +119,12 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(q_{cond} = kA\Delta T\)<br><br>
-                    \(q_{rad} = {\sigma}{\epsilon}AF_{ij}(T_{i}^{4} - T_{j}^{4})\)<br><br>
-                    \(N_A = k_c(C_{As} - C_{A})\)
+                    \[q_{cond} = kA\Delta T\]
+                    \[q_{rad} = {\sigma}{\epsilon}AF_{ij}(T_{i}^{4} - T_{j}^{4})\]
+                    \[N_A = k_c(C_{As} - C_{A})\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
-                <u><h2>Heat & Mass Transfer</h2></u>
+                <h2><u>Heat & Mass Transfer</u></h2>
                     Now this is an interesting one that you may know a little bit about already. There are two obvious parts to heat and mass transfer - <i>heat</i> and <i>mass</i>. 
                     The purpose of learning how heat flows from one material to another or how mass moves from one region to another is important to understand why things move the way they do!
                     In this topic, you will learn about coduction, convection, radiation, diffusion, etc. Which will help you see why steel conduct heat while rubber does not do much of heat transfer.
@@ -134,7 +134,7 @@
                     temperature of the ice cube, therefore melting it. For an example of mass transfer, try imagining a bowl of cake batter and putting in several drops of food coloring. As you swirl the batter
                     around the bowl, you will slowly see that the initially concentrated food coloring will mix together with the batter and eventually make a homogeneous mixture. 
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn H&M Trans.</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn H&M Trans.</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -144,13 +144,13 @@
     <div class="article-content">
         <table class="view-all">
             <tr>
-                <td style="text-align: center; width:20%; border:1px; font-size:14px;">
-                    \(\int_{0}^{V} \frac{dV}{F_{Ao}} = \int_{0}^{X_A} \frac{dX_A}{-r_A} \)<br><br>
-                    \(N_{Ao}\frac{dX}{dt} = -r_AV\)<br><br>
-                    \(F_{Ao} - F_A + \int^V r_AdV = \frac{dN_A}{dt}\)
+                <td style="text-align: center; width:25%; border:1px; font-size:14px;">
+                    \[\int_{0}^{V} \frac{dV}{F_{Ao}} = \int_{0}^{X_A} \frac{dX_A}{-r_A} \]
+                    \[N_{Ao}\frac{dX}{dt} = -r_AV\]
+                    \[F_{Ao} - F_A + \int^V r_AdV = \frac{dN_A}{dt}\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
-                <u><h2>Chemical Reactions Engineering</h2></u>
+                <h2><a href="{{ url_for('subjects.subject_topic', subject_name='cheme', topic_name='cre') }}"><u>Chemical Reactions Engineering</u></a></h2>
                     Chemical Reactions Engineering... This is the true essence of chemical engineering - the topic that differs chemical engineers from other engineers! This
                     subject where you will studying about chemical reactors and how you can optimize chemical reactions accordingly with different reactors to achieve maximum output!
                     Remember all the extra hours you put into the previous topics? Well, you will be glad that you did, because there are interactions of fluid mechanics, heat transfer,
@@ -161,7 +161,7 @@
                     pour in material in manually to make a batch of chemical blend. A batch reactor is very much similar to the pot you use to cook soup, where you can put in your stock,
                     carrots, chicken, noodles, etc. to help you make a <i>batch</i> of soup. The only difference? It is 1,000 time larger!
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn CRE</a></button></td>
+                <td style="width:15%; text-align: center;"><a class="view-all" href="{{ url_for('subjects.subject_topic', subject_name='cheme', topic_name='cre') }}"><button type="button" class="btn btn-primary cheme">Learn CRE</button></a></td>
             </tr>
         </table>
     </div>  
@@ -172,12 +172,12 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(k_pe + k_i\int_0^t e(t)dt + k_d\frac{de}{dt}\)<br><br>
-                    \(G(s) = \frac{8}{s(s+2)(s+4)}\)<br><br>
-                    \(\frac{y(s)}{u(s)} = H(s) = \frac{K}{Ts + 1}\)
+                    \[k_pe + k_i\int_0^t e(t)dt + k_d\frac{de}{dt}\]
+                    \[G(s) = \frac{8}{s(s+2)(s+4)}\]
+                    \[\frac{y(s)}{u(s)} = H(s) = \frac{K}{Ts + 1}\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
-                <u><h2>Process Dyanmics & Controls</h2></u>
+                <h2><u>Process Dyanmics & Controls</u></h2>
                     This is a sort of combo between control engineering and chemical engineering as they are designed by control engineers but frequently used in chemical reactors introduced
                     in chemical reactions engineering. The purpose of process controls is to achieve a production level of consistency through an economical and safe means. Most of what is learned
                     in process controls is the tuning of controllers and how the different types of controllers may be advantageous for one reactor but bad for another. 
@@ -186,7 +186,7 @@
                     The toilet never over fills such that it overspills but also does not under fill such that the water will not flush. Well this is because of how the toilet fill valve is controlled to close
                     once a certain water level is obtained with a water level measurement!
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn Proc. Cont.</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary cheme"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='cheme') }}">Learn Proc. Cont.</a></button></td>-->
             </tr>
         </table>
     </div>  
