--- a/flaskblog/subjects/subjects_templates/math/math_home.html
+++ b/flaskblog/subjects/subjects_templates/math/math_home.html
@@ -39,9 +39,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(f(x) = e^{x} + 4sin(x)\)<br><br>
-                    \(\lim_{x \to +\infty} f(x)\)<br><br>
-                    \(f'(x) = \frac{dy}{dx} = y'\)
+                    \[f(x) = e^{x} + 4sin(x)\]
+                    \[\lim_{x \to +\infty} f(x)\]
+                    \[f'(x) = \frac{dy}{dx} = y'\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Calculus I</h2></u>
@@ -50,7 +50,7 @@
                     helping you understand what derivatives are and how the rules of derivatives are applied when using them on the different functions
                     you encountered in the beginning of this topic. Finally, you will see how these differentiation techniques can be used in applications!
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. I</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. I</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -61,9 +61,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(\int_{a}^{b} x^2 dx\)<br><br>
-                    \(\sum_{n=1}^{\infty} f(x)\)<br><br>
-                    \(\frac{dy}{dx} = 2y + x\)
+                    \[\int_{a}^{b} x^2 dx\]
+                    \[\sum_{n=1}^{\infty} f(x)\]
+                    \[\frac{dy}{dx} = 2y + x\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Calculus II</h2></u>
@@ -72,7 +72,7 @@
                     You will see the applications of integrals and the topic will move on to a slightly different direction. The proceeding chapter of this topic 
                     will be series! These will include series such as Taylor and Maclaurin series and how you can use them for different types of approximations.  
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. II</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. II</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -83,9 +83,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(dz = f_x dx + f_y dy\)<br><br>
-                    \(\iint_D f(x,y) dxdy\)<br><br>
-                    \(\iiint_R f(x,y,z) dxdydz\)
+                    \[dz = f_x dx + f_y dy\]
+                    \[\iint_D f(x,y) dxdy\]
+                    \[\iiint_R f(x,y,z) dxdydz\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Calculus III</h2></u>
@@ -93,7 +93,7 @@
                     bit of a twist - you will be working with 2 and 3-dimensional calculus! This does add a little more complexity to the way you finish calculating the double/triple
                     integrals, longer differention rules to the account for the relationship of one variable has with another.
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. III</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. III</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -104,9 +104,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(y' + p(x)y =  q(x)y^{n}\)<br><br>
-                    \(ay'' + by' + cy = g(t)\)<br><br>
-                    \(W(f, g) = fg' - gf'\)
+                    \[y' + p(x)y =  q(x)y^{n}\]
+                    \[ay'' + by' + cy = g(t)\]
+                    \[W(f, g) = fg' - gf'\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Calculus IV</h2></u>
@@ -115,7 +115,7 @@
                     homogeneous differential equations, you will begin to learn the different techniques used to solve multi-dimensional and non-homogenous 
                     differential equations. This is not an easy topic but solving the toughest of differential equation analytically is one of the most satisfying feeling you can have! 
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. IV</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Calc. IV</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -126,9 +126,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(det\begin{bmatrix}a & b\\c & d\end{bmatrix} = ad - bc\)<br><br>
-                    \(det(A - \lambda I) = 0 \)<br><br>
-                    \(A^{-1} = \frac{1}{ad-bc}\begin{bmatrix}d & -b\\-c & a\end{bmatrix}\)
+                    \[det\begin{bmatrix}a & b\\c & d\end{bmatrix} = ad - bc\]
+                    \[det(A - \lambda I) = 0 \]
+                    \[A^{-1} = \frac{1}{ad-bc}\begin{bmatrix}d & -b\\-c & a\end{bmatrix}\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Linear Algebra</h2></u>
@@ -137,7 +137,7 @@
                     What follows after is extending the technique you learn for 2 equations to more number of equations. Then you will learn about 
                     eigenvalue, eigenvectors, linear transformation and such that can be applied to matrices!
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Lin. Alg.</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary math"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='math') }}">Learn Lin. Alg.</a></button></td>-->
             </tr>
         </table>
     </div>  
