--- a/flaskblog/subjects/subjects_templates/phys/phys_home.html
+++ b/flaskblog/subjects/subjects_templates/phys/phys_home.html
@@ -32,9 +32,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(F_{net} = ma\)<br><br>
-                    \(W = \int_{x_o}^{x} F(x) dx\)<br><br>
-                    \(Power = \frac{dW}{dt}\)
+                    \[F_{net} = ma\]
+                    \[W = \int_{x_o}^{x} F(x) dx\]
+                    \[Power = \frac{dW}{dt}\]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Physics I</h2></u>
@@ -42,7 +42,7 @@
                     that is later used in chemical engineering. This might mostly be understanding what work is, how does friction play a part in a system, oscillations, etc. This is a good
                     way to expand your knowledge of why things act the way they do.
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary phys"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='phys') }}">Learn Phys. I</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary phys"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='phys') }}">Learn Phys. I</a></button></td>-->
             </tr>
         </table>
     </div>  
@@ -53,9 +53,9 @@
         <table class="view-all">
             <tr>
                 <td style="text-align: center; width:20%; border:1px;">
-                    \(V = IR\)<br><br>
-                    \(\nabla \cdot E = \frac{\rho}{\epsilon_{o}}\)<br><br>
-                    \(\int_A B \cdot dA = 0 \)
+                    \[V = IR\]
+                    \[\nabla \cdot E = \frac{\rho}{\epsilon_{o}}\]
+                    \[\int_A B \cdot dA = 0 \]
                 </td>
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Physics II</h2></u>
@@ -64,7 +64,7 @@
                     It is also explained how and why electricity and magnetism are related through the use of maxwell's equations! This is not too important, in my opinion,
                     in your chemical engineering, although it is always good to know more! 
                 </td class="content-button-divider">
-                <td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary phys"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='phys') }}">Learn Phys. II</a></button></td>
+                <!--<td style="width:15%; text-align: center;"><button type="button" class="btn btn-primary phys"><a class="view-all" href="{{ url_for('subjects.subject_home', subject_name='phys') }}">Learn Phys. II</a></button></td>-->
             </tr>
         </table>
     </div>  
