--- a/flaskblog/subjects/subjects_templates/subjects.html
+++ b/flaskblog/subjects/subjects_templates/subjects.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "layout_subject.html" %}
 
 {% block content %}
 <!--
@@ -29,11 +29,11 @@
                 <td style="width:60%; padding: 10px 50px 10px 30px;">
                 <u><h2>Chemical Engineering</h2></u>
                     This is the entire reason why I built this website. If I didn't love this subject, I wouldn't have been crazy
-                    enought to spend my free time and weekends doing this. From all of the transport phenomena (maybe except for thermo)
-                    classes, reactions engineering, process control and many more, these classes were not only fun but also challenging.
-                    I hope these notes can play a part in helping you realize your passion for ChemE! 
+                    enought to spend my free time and weekends doing this. I am currently in the midst of compiling all of my notes
+                    from all of the transport phenomena, reactions engineering, process control and many more! I thought t
+                    hese classes were not only fun but also challenging. I hope these notes can play a part in helping you realize your passion for ChemE! 
                     <br><br>
-                    This subject breaks down each individual component of a reaction and through thorough analysis, it can help you
+                    My understanding of chemical engineering is where you break down each component of a reaction and through thorough analysis, it can help you
                     understand how the upscaling of chemical reactions to the desired size is possible! You can click
                     on the button to the right and start learning more about Chemical Engineering.   
                 </td class="content-button-divider">
